syntax="proto3";
package nerv;
option go_package="micro-gogrpc-gateway/server/proto/gen/go;tracepb";

message Trace {
  int64 time = 1;
  string location = 2;
  int64 stay_sec = 3;
  string viee_page = 4;
}

message GetTraceRequest {
  string id = 1;
}

message GetTraceResponse {
  string id = 1;
  Trace trace = 2;
}

service TraceService {
  rpc GetTrace (GetTraceRequest) returns (GetTraceResponse);
}